# L3

./: .gitignore  README.md  app.py  installed.txt  pyproject.toml  requirements.txt  start_app.ps1
config/: settings.py
data/: knowledge_base.db
data/documents/: data_secutity_policy.txt
my_ref/: employee_onboarding.txt  hr_leave_policy.txt  it_support_guide.txt  screenshots.txt
src/agents/: crew_setup.py
src/evaluation/: ragas_evaluator.py
src/mcp/: mcp_tools.py  sqlite_mcp_server.py
src/rag/: document_processor.py  vector_store.py
