[project]
name = "l3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.5.18",
    "crewai==0.86.0",
    "crewai-tools==0.17.0",
    "datasets==3.1.0",
    "langchain==0.3.7",
    "langchain-chroma==0.1.4",
    "langchain-community==0.3.5",
    "langchain-ollama==0.2.0",
    "langchain-text-splitters==0.3.2",
    "numpy==1.26.4",
    "ollama==0.4.4",
    "pandas==2.2.3",
    "pydantic==2.9.2",
    "pypdf==5.1.0",
    "python-dotenv==1.0.1",
    "ragas==0.2.6",
    "streamlit==1.39.0",
]
